# wsjtx_lib_nodejs

./: CMakeLists.txt  package-lock.json  package.json
native/: wsjtx_c_api.cpp  wsjtx_c_api.h  wsjtx_wrapper.cpp  wsjtx_wrapper.h
scripts/: package-prebuilds.js
src/: index.ts  types.ts
test/: wsjtx.basic.test.ts  wsjtx.test.ts
